--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,15 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+ <h2 padding>Mi lista de elementos</h2>
+  <ion-list>
+    <button ion-item *ngFor="let ele of elementos" (click)="elSeleccionado(ele)">
+     {{ ele.nombre }}
+    </button>  
+  </ion-list> 
+
 </ion-content>
